--- a/pom.xml
+++ b/pom.xml
@@ -62,6 +62,11 @@
             <version>0.11.5</version>
             <scope>runtime</scope>
         </dependency>
+        <dependency>
+            <groupId>org.json</groupId>
+            <artifactId>json</artifactId>
+            <version>20240303</version> <!-- Latest version as of April 2025 -->
+        </dependency>
 
     </dependencies>
 
